fix bug with jump footer

--- a/src/commons/Container.module.css
+++ b/src/commons/Container.module.css
@@ -6,3 +6,11 @@
     width: 80%;
     margin: 0 auto;
 }
+
+.footerContainer {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 80%;
+    margin: 0 auto;
+}
